--- a/data-binding/banking/src/main/webapp/WEB-INF/views/customer/list.html
+++ b/data-binding/banking/src/main/webapp/WEB-INF/views/customer/list.html
@@ -87,7 +87,7 @@
                             <button type="button" class="btn btn-outline-primary"><i
                                     class="fa-solid fa-arrow-right-arrow-left"></i></button>
                         </a>
-                        <a>
+                        <a th:href="@{/customers/delete/__${c.getId()}__}">
                             <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal"><i class="fa-solid fa-ban"></i>
                             </button>
